package edu.hitsz.application;

public interface Badthing {
    public void update();
}
